--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -7,6 +7,11 @@
   background-color: var(--red);
 }
 
+.img {
+  max-width: 200px;
+  max-height: 200px;
+}
+
 .nav {
   justify-content: space-between;
   height: 50px;
@@ -26,8 +31,25 @@
     margin: 5px;
 }
 
+
 .container {
-  display:flex;
-  justify-content: space-evenly;
-  
+  display: flex;
+  flex-direction: column;
+  padding: 16px;
+  background-color: var(--red)
 }
+
+
+
+
+
+@media screen and ( max-width: 1024px ) {
+  img.responsive { width: 200px; }
+  }
+  @media screen and ( min-width:1025px ) and ( max-width: 1280px ) {
+  img.responsive { width: 300px; }
+  }
+  @media screen and ( min-width: 1081px ) {
+  img.responsive { width: 200px; }
+  }
+  
