Corrected image location

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -13,7 +13,7 @@
 }
 
 .nav {
-  justify-content: space-between;
+  justify-content: space-evenly;
   height: 50px;
   background-color: var(--gold)
 }
